--- a/public/index.html
+++ b/public/index.html
@@ -256,7 +256,7 @@ function exportCSV() {
   window.location.href = "/api/export-csv";
 }
 
-// ★★（可选，需你的服务器侧支持）自动实时刷新：WebSocket模式 ★★
+// ★(可选) 实时推送警告（需后端WebSocket支持）★
 /*
 function setupWebSocket() {
   const ws = new WebSocket('ws://localhost:3001');
